--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,10 @@ services:
     backend:
         image: node:slim
         environment:
-          - NODE_ENV=development
+          - NODE_ENV=production
+          - MONGOURL=mongodb://mongodb:27017/
+          - DB=almundo
+          - COLLECTION=hotel
           - MONGODB_USER="usermongo"
           - MONGODB_PASS="passmongo"
         volumes:
@@ -15,11 +18,11 @@ services:
           - mongodb
         depends_on:
           - mongodb
-        command: bash -c "cd /src && yarn install && yarn start"
+        command: bash -c "cd /src && yarn build && yarn start"
     frontend:
         image: node:slim
         environment:
-          - NODE_ENV=development
+          - NODE_ENV=production
         volumes:
           - ./src/frontend:/src:rw
         ports:
@@ -28,7 +31,7 @@ services:
           - backend
         depends_on:
           - backend
-        command: bash -c "cd /src && yarn install && yarn start"
+        command: bash -c "cd /src && yarn build && yarn start"
     mongodb:
         image: mongo:latest
         environment:
