--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -2,9 +2,14 @@
   "name": "am-frontend-challenge",
   "version": "1.0.0",
   "description": "Almundo Examen Frontend",
-  "main": "index.js",
   "author": "Mariano German Egui",
   "license": "MIT",
+  "scripts": {
+    "start": "if test \"$NODE_ENV\" = \"production\" ; then node ./index.js ; else ./node_modules/.bin/nodemon ./index.js ; fi",
+    "build": "if test \"$NODE_ENV\" = \"production\" ; then yarn install --production ; else yarn install ; fi",
+    "seeds": "node ./seeds/index.js",
+    "eslint": "./node_modules/.bin/eslint ./ --fix"
+  },
   "dependencies": {
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
@@ -17,10 +22,5 @@
     "eslint": "^4.19.1",
     "eslint-config-google": "^0.9.1",
     "nodemon": "^1.17.3"
-  },
-  "scripts": {
-    "start": "if test \"$NODE_ENV\" = \"production\" ; then node ./index.js ; else ./node_modules/.bin/nodemon ./index.js ; fi",
-    "seeds": "node ./seeds/index.js",
-    "eslint": "./node_modules/.bin/eslint ./ --fix"
   }
 }
