--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "angular-io-example",
+  "name": "am-frontend-challenge",
   "version": "1.0.0",
-  "private": true,
-  "description": "Example project from an angular.io guide.",
+  "description": "Almundo Examen Frontend",
+  "author": "Mariano German Egui",
+  "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "build": "ng build --prod",
+    "build": "if test \"$NODE_ENV\" = \"production\" ; then yarn install --production ; else yarn install ; fi",
+    "production": "ng build --prod",
     "start": "ng serve --host=0.0.0.0 --public-host",
     "test": "ng test",
     "lint": "tslint ./src/**/*.ts -t verbose",
     "e2e": "ng e2e"
   },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
   "dependencies": {
     "@angular/animations": "~5.0.0",
+    "@angular/cli": "1.7.4",
     "@angular/common": "~5.0.0",
     "@angular/compiler": "~5.0.0",
     "@angular/compiler-cli": "~5.0.0",
@@ -28,15 +28,15 @@
     "@angular/router": "~5.0.0",
     "@angular/upgrade": "~5.0.0",
     "angular-in-memory-web-api": "~0.5.0",
-    "bootstrap": "^4.0.0",
+    "bootstrap": "^4.0.0-beta.3",
     "core-js": "^2.4.1",
     "jquery": "^3.3.1",
     "ng-inline-svg": "^6.1.0",
+    "popper.js": "^1.12.9",
     "rxjs": "^5.5.0",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/cli": "1.6.5",
     "@types/jasmine": "~2.8.0",
     "@types/jasminewd2": "^2.0.3",
     "@types/node": "^6.0.45",
@@ -55,6 +55,5 @@
     "ts-node": "^3.3.0",
     "tslint": "^3.15.1",
     "typescript": "2.4.2"
-  },
-  "repository": {}
+  }
 }
