--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     backend:
         image: node:slim
         environment:
-          - NODE_ENV=production
+          - NODE_ENV=development
           - MONGOURL=mongodb://mongodb:27017/
           - DB=almundo
           - COLLECTION=hotel
@@ -22,7 +22,7 @@ services:
     frontend:
         image: node:slim
         environment:
-          - NODE_ENV=production
+          - NODE_ENV=development
         volumes:
           - ./src/frontend:/src:rw
         ports:
