--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -10,8 +10,7 @@
     "production": "ng build --prod",
     "start": "ng serve --host=0.0.0.0 --public-host",
     "test": "ng test",
-    "lint": "tslint ./src/**/*.ts -t verbose",
-    "e2e": "ng e2e"
+    "lint": "tslint ./src/**/*.ts -t verbose"
   },
   "dependencies": {
     "@angular/animations": "~5.0.0",
@@ -48,10 +47,7 @@
     "karma-coverage-istanbul-reporter": "^1.3.3",
     "karma-jasmine": "^1.0.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-phantomjs-launcher": "^1.0.2",
     "lodash": "^4.16.2",
-    "phantomjs-prebuilt": "^2.1.7",
-    "protractor": "~5.1.0",
     "ts-node": "^3.3.0",
     "tslint": "^3.15.1",
     "typescript": "2.4.2"
